Feat : OpenApi 사용을 위한 수정 및 추가